# analint

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONCEPT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  mkdocs.yml  prek.toml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  quality.yml
agents/: index.html
docs/: agents.md
examples/: expectations.toml  play.py
examples/branch_protection/: README.md  spec.py
examples/cloak/: README.md  spec.py
examples/coin/: README.md  spec.py
examples/ecommerce/: README.md  spec.py
examples/fulfillment/: README.md  actions.py  entities.py  events.py  invariants.py  lifecycles.py  queries.py  scenarios.py  spec.py
examples/k8s_replicaset/: README.md  spec.py
examples/mafia/: README.md  spec.py
examples/oauth/: README.md  __init__.py  assurance.py  oauth.qnt  protocol.py  spec.py
examples/sunless_crypt/: README.md  spec.py
examples/taskboard/: README.md  actions.py  actors.py  entities.py  events.py  flows.py  invariants.py  lifecycles.py  rules.py  scenarios.py  spec.py  state_machines.py  use_cases.py
examples/trollbridge/: README.md  spec.py
research/: 00-overview.md  01-expressiveness.md  02-related-work.md  03-games-narrative-simulation.md  04-direction.md  05-universal-dsl.md  06-case-study-cloak-of-darkness.md  07-declarative-semantics.md  08-ai-agents.md  09-loader-and-entrypoint.md  10-scale-and-honest-assessment.md  11-spec-code-bridge.md  12-domain-layer-and-ddd.md  13-field-level-dsl.md  14-positioning-declarativity-and-audit.md  15-quint-coin-comparison.md  16-nondeterministic-initial-states.md  17-engine-audit-and-realignment.md  18-critical-audit-of-v1.3-direction.md  19-visualization-backends-and-positioning.md  20-benchmark-strategy-before-transition-kernel.md  21-playable-spec-experiment.md  22-event-dispatch.md  23-evidence-github-branch-protection.md  24-second-external-model-selection.md  25-evidence-gate-synthesis.md  26-p4-self-contained-model-workbench-plan.md  27-dsl-type-boundary-audit.md  28-p4.5-k8s-replicaset-dogfood.md  29-ecosystem-and-first-public-release.md  30-dsl-contract-stabilization-review.md  31-goal-and-expressiveness-closure-audit.md  32-benchmarks-backends-and-terminal-ui.md  33-agent-skill-vs-mcp.md
reviews/: 2015619-executable-flow.md  42a34df-subtractive-cleanup-second-pass-review.md  4465e16-branch-protection-evidence.md  535ecb8-transition-kernel.md  584d819-pre-kernel-series.md  67be4f8-canonical-model-verification.md  8cca900-presence-and-event-direction.md  c7b7686-flow-hardening.md  c893ca0-canonical-verification-hardening.md  ca537a2-kernel-readiness.md  f45edac-subtractive-cleanup-review.md
scripts/: bench.py  bench_scaling.py  scaling_models.py
search/: search_index.json
skills/analint/: SKILL.md
skills/analint/agents/: openai.yaml
src/analint/: __init__.py  cli.py  mcp_server.py  query.py
src/analint/loader/: __init__.py  discovery.py  python_loader.py
src/analint/models/: __init__.py  action.py  actor.py  business.py  contract.py  effect.py  entity.py  event.py  expr.py  flow.py  initial.py  invariant.py  lifecycle.py  param.py  predicate.py  quantifier.py  query.py  root.py  scenario.py  scope.py  statemachine.py
src/analint/reporter/: __init__.py  base.py  exploration_artifact.py  json_reporter.py  terminal.py
src/analint/validator/: __init__.py  artifact_builder.py  engine.py  exploration_service.py  explorer.py  flow_runner.py  kernel.py  rule_checker.py  scenario_runner.py  state_checks.py  structural.py
tests/: test_characterization.py  test_composition.py  test_create_delete.py  test_example_expectations.py  test_exploration_artifact.py  test_exploration_service.py  test_explorer.py  test_expressions.py  test_flow.py  test_kernel.py  test_loader.py  test_models.py  test_multiplicity.py  test_params.py  test_play_runner.py  test_presence.py  test_quantifiers.py  test_query.py  test_scaling_models.py  test_soundness.py  test_trace.py  test_transition_conformance.py  test_typecheck_probes.py  test_validator.py  test_verdict.py
tests/fixtures/: broken_spec.py  multiple_specs.py  simple_spec.py
tests/fixtures/composed/: __init__.py  component.py  spec.py
tests/fixtures/inconclusive/: spec.py
tests/fixtures/warns/: spec.py
tests/snapshots/: README.md  examples.json
tests/typecheck_probes/: authoring_forms.py  negative_forms.py
