[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analint"
version = "0.10.0"
description = "Analytics linter — describe your system in Python, validate consistency"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
analint = "analint.cli:app"
analint-mcp = "analint.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/analint"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
