[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analint"
version = "0.0.1"
description = "Analytics linter — describe your system in Python, validate consistency"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "angru", email = "mydifservices@gmail.com" },
]
keywords = [
    "linter",
    "analytics",
    "modeling",
    "verification",
    "model-checking",
    "reachability",
    "specification",
    "dsl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/angru/analint"
Repository = "https://github.com/angru/analint"
Issues = "https://github.com/angru/analint/issues"
Changelog = "https://github.com/angru/analint/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "prek",
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "ty",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
analint = "analint.cli:app"
analint-mcp = "analint.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/analint"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "ANN", # type annotations
    "B",   # bugbear
    "E4",
    "E7",
    "E9",
    "F",   # pyflakes
    "I",   # import sorting
    "RUF", # Ruff-specific rules
    "SIM", # simplifications
    "UP",  # modern Python
]
ignore = [
    "ANN401", # Any is part of the public DSL and dynamic loader boundary
    "B008",   # Typer declares options through function defaults
    "RUF022", # public exports are grouped by DSL concept
    "RUF001",
    "RUF002",
    "RUF003", # intentional Unicode in human-facing output and research notes
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["ANN"]
"tests/**/*.py" = ["ANN", "B011"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
allowed-unresolved-imports = ["mcp.**"]

[tool.ty.src]
include = ["src"]
